--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -47,7 +47,7 @@
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:hint="@string/old_password_placeholder"
-                android:inputType="textNoSuggestions"
+                android:inputType="textPassword"
                 android:paddingStart="20dp"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:hint="@string/new_password_placeholder"
-                android:inputType="textNoSuggestions"
+                android:inputType="textPassword"
                 android:paddingStart="20dp"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:hint="@string/new_password_confirm_placeholder"
-                android:inputType="numberSigned"
+                android:inputType="textPassword"
                 android:paddingStart="20dp"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
