--- a/app/src/main/res/layout/activity_detail_pesanan.xml
+++ b/app/src/main/res/layout/activity_detail_pesanan.xml
@@ -48,23 +48,23 @@
                         <TextView
                             android:id="@+id/nama_kapal"
                             style="@style/PembelianTextSecondary"
-                            android:layout_width="120dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="1dp"
+                            android:layout_height="1dp"
                             android:layout_marginStart="15dp"
                             android:layout_marginTop="10dp"
                             android:text="@string/kapal"
-                            android:textColor="@color/black"
+                            android:textColor="@android:color/transparent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
                             android:id="@+id/mTanggal_keberangkatan"
-                            style="@style/PembelianTextSecondary"
+                            style="@style/PembelianTextPrimary"
                             android:layout_width="120dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="15dp"
                             android:text="@string/date"
-                            android:textSize="10sp"
+                            android:textSize="15sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/nama_kapal" />
 
@@ -109,7 +109,7 @@
                             android:layout_marginStart="40dp"
                             android:layout_marginTop="10dp"
                             android:maxLines="1"
-                            android:text="@string/pelabuhan_asal"
+                            android:text="Pelabuhan Benoa"
                             android:textAlignment="viewEnd"
                             android:textColor="@color/black"
                             app:layout_constraintEnd_toEndOf="@id/mInner_Pelabuhan"
@@ -153,7 +153,7 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="40dp"
                             android:maxLines="1"
-                            android:text="@string/pelabuhan_tujuan"
+                            android:text="Pelabuhan Lembar"
                             android:textAlignment="viewStart"
                             android:textColor="@color/black"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -335,12 +335,13 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/pesan_tiket"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:text="Pesan"
+                app:cornerRadius="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/card_view_metode_pembayaran" />
 
