--- a/app/src/main/res/layout/berita_kapal_recycler.xml
+++ b/app/src/main/res/layout/berita_kapal_recycler.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/image_berita"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:text="Kapal"
                 android:layout_margin="10dp"
                 android:textSize="15dp"
